# chat-app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose-main.yaml
backend/: README.md
backend/services/account/: .flake8  Dockerfile  Makefile  README.md  __init__.py  pyproject.toml
backend/services/account/alembic/: env.py
backend/services/account/alembic/versions/: f09a92a37aab_create_users_and_account.py
backend/services/account/api/v1/router/: __init__.py  account.py  users.py
backend/services/account/config/: __init__.py  setting.py
backend/services/account/controller/: __init__.py  account.py  auth.py  users.py
backend/services/account/core/: __init__.py  build.py  start.py
backend/services/account/docs/: conf.py  interfaces.rst  plugins.rst  scripts.rst  tests.functional.rst  tests.unit.operations.rst  tests.unit.rst
backend/services/account/docs/_build/doctrees/: config.doctree  controller.doctree  core.doctree  environment.pickle  error.doctree  handlers.doctree  index.doctree  interfaces.doctree  models.doctree  modules.doctree  plugins.doctree  schemas.doctree  scripts.doctree  tests.doctree  tests.functional.doctree  tests.unit.doctree  tests.unit.operations.doctree  tests.unit.routes.doctree  tools.doctree  utils.doctree
backend/services/account/docs/_build/html/: .buildinfo  controller.html  error.html  interfaces.html  models.html  plugins.html  schemas.html  search.html  tests.html  tests.unit.html  utils.html
backend/services/account/docs/_build/html/_sources/: handlers.rst.txt  models.rst.txt  tools.rst.txt  utils.rst.txt
backend/services/account/error/: __init__.py  exceptions.py
backend/services/account/handlers/: __init__.py  exceptions.py
backend/services/account/interfaces/: account.py  builder.py  producer.py  users.py
backend/services/account/models/: __init__.py  account.py  users.py
backend/services/account/plugins/: __init__.py  producer.py  redis.py
backend/services/account/schemas/: __init__.py  account.py  error.py  users.py
backend/services/account/scripts/: runner.py  startup.sh
backend/services/account/static/: index.html
backend/services/account/tests/: __init__.py  conftest.py  test_data.py
backend/services/account/tests/functional/: test_user_process.py
backend/services/account/tests/unit/: __init__.py
backend/services/account/tests/unit/operations/: __init__.py  test_account_operations.py  test_users_operations.py
backend/services/account/tests/unit/routes/: __init__.py  test_route_account.py  test_route_users.py
backend/services/account/tools/: __init__.py  log.py
backend/services/account/utils/: __init__.py  password.py  sql.py
backend/services/chat/: .flake8  Dockerfile  Makefile  README.md  __init__.py  pyproject.toml
backend/services/chat/core/: asgi.py  settings.py  urls.py
backend/services/chat/docs/: conf.py  scripts.rst
backend/services/chat/docs/_build/doctrees/: core.doctree  environment.pickle  index.doctree  modules.doctree  scripts.doctree  websocket.controller.doctree  websocket.doctree  websocket.migrations.doctree  websocket.tests.doctree  websocket.tools.doctree  websocket.utils.doctree
backend/services/chat/docs/_build/html/: .buildinfo  core.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  scripts.html  search.html  searchindex.js  websocket.controller.html  websocket.html  websocket.migrations.html  websocket.tests.html  websocket.tools.html  websocket.utils.html
backend/services/chat/docs/_build/html/_modules/: index.html
backend/services/chat/docs/_build/html/_sources/: index.rst.txt  websocket.controller.rst.txt  websocket.migrations.rst.txt  websocket.rst.txt  websocket.tools.rst.txt
backend/services/chat/scripts/: __init__.py  runner.py  startup.sh
backend/services/chat/search/: urls.py  views.py
backend/services/chat/search/tests/: test_views.py
backend/services/chat/websocket/: __init__.py  apps.py  documents.py  models.py  routing.py  urls.py  views.py
backend/services/chat/websocket/controller/: consumer.py
backend/services/chat/websocket/migrations/: __init__.py
backend/services/chat/websocket/templates/: index.html
backend/services/chat/websocket/tests/: conftest.py  test_websocket.py
backend/services/chat/websocket/tools/: __init__.py  log.py
backend/services/chat/websocket/utils/: run.py
backend/services/notification/: .flake8  Dockerfile  Makefile  README.md  __init__.py  config.ini  main.py  pyproject.toml
backend/services/notification/config/: settings.py
backend/services/notification/consumers/: __init__.py  add_admin.py  new_user.py
backend/services/notification/core/: build.py
backend/services/notification/docs/: conf.py  config.ini  index.rst  interfaces.rst
backend/services/notification/docs/_build/doctrees/: config.doctree  controller.doctree  core.doctree  environment.pickle  index.doctree  interfaces.doctree  modules.doctree  plugins.doctree  scripts.doctree  tools.doctree
backend/services/notification/docs/_build/html/: .buildinfo
backend/services/notification/interfaces/: consumer.py  notification.py  parser.py
backend/services/notification/plugins/: __init__.py  grafana.py  mail.py
backend/services/notification/scripts/: runner.py  startup.sh
backend/services/notification/tests/: test_version.py
backend/services/notification/tools/: log.py
backend/services/support/: .flake8  Dockerfile  Makefile  README.md  pyproject.toml
backend/services/support/api/v1/router/: support.py
backend/services/support/config/: __init__.py  setting.py
backend/services/support/core/: build.py  model.py  start.py
backend/services/support/error/: __init__.py  exceptions.py
backend/services/support/handlers/: __init__.py  exceptions.py
backend/services/support/interfaces/: __init__.py  builder.py  factory.py  model.py
backend/services/support/schemas/: error.py  support.py
backend/services/support/scripts/: runner.py
backend/services/support/tests/: test_main.py
backend/services/support/utils/: log.py  model.py
frontend/: package.json
(+153 files in other folders)
